# pindf

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  file_parse.c  file_parse.h  filter_test.c  lexer.c  lexer.h  lexer_test.c  linked_list.h  main.c  parser.c  parser.h  parser_test.c  pdf_doc.c  pdf_doc.h  pdf_obj.c  pdf_obj.h  pindf.c  pindf.h  serialize.c  serialize.h  simple_vector.c  simple_vector.h  type.h  uchar_str.h  vec_test.c
LICENSES/: zlib_licence
container/: simple_vector.c  simple_vector.h  uchar_str.c  uchar_str.h
core/: lexer.c  lexer.h  parser.c  parser.h  serialize.c  serialize.h
docs/: conf.py  contents.rst  examples.rst  getting_started.rst  index.rst  limitations.rst  pdf_structure.rst
docs/api/: modules.rst
logger/: logger.c  logger.h
pdf/: doc.c  doc.h  modif.c  modif.h  obj.c  obj.h  xref.c  xref.h
stream/: filter.c  filter.h
temp/: proposal_doc_modify.md
test/: compress_test.c  dict_test.c  doc_save_modif_test.c  filter_test.c  lexer_test.c  modif_test.c  parser_from_buffer_test.c  parser_test.c  vec_test.c
